[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-agent"
version = "0.1.0"
description = "A smart stock analysis agent using LLM and machine learning."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy",
    "pandas",
    "yfinance",
    "requests",
    "openai",
    "scikit-learn",
    "schedule"
]

[project.scripts]
stock-agent = "stock_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]
